# shinshu-syllabus-mcp

./: .gitignore  LICENSE  README.md  gitignore  pyproject.toml  scraper.py  server.py
