[project]
name = "shinshu-syllabus-mcp"
version = "1.0.0"
description = "MCP server for searching Shinshu University course syllabi / 信州大学シラバス検索MCPサーバー"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "mcp[cli]>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]